<resources>
    <string name="app_name">Everyday Horoscope</string>
    <string name="desc_zodiac_signs_image">Zodiac signs image</string>
    <string name="desc_logo">Logo</string>
    <string name="desc_zodiac_sign">Zodiac Sign</string>
    <string name="button_show_horoscope">Show my horoscope</string>
    <string name="text_prompt_select">Please, select a zodiac &#8230;</string>
    <string name="text_prompt_select_spinner">select a zodiac sign</string>
    <string name="text_horoscope">HOROSCOPE</string>
    <string name="text_luck">LUCK</string>
    <string name="text_lucky_number">number:&#160;&#160;</string>
    <string name="text_lucky_time">time:&#160;&#160;</string>
    <string name="text_lucky_color">color:&#160;&#160;</string>
    <string name="text_pair">PAIR</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="button_translate_horoscope">Translate</string>
    <string name="text_translation_warning">Before you translate</string>
    <string name="text_translation_info">Translation depends on an external service and it is not controlled by this app. As a result, the quality of the tranlation cannot be guaranted. \nAre you sure you want to translate?</string>
    <string name="text_translate">Translate</string>
    <string name="text_cancel">Cancel</string>
    <string name="toast_internet_connection_required">Internet connection required!</string>

    <!--array of zodiac signs-->
    <array name="zodiac_signs">
        <item>select a zodiac sign</item>
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </array>

    <!--names of zodiac signs-->
    <string name="text_zodiac_Aries">Aries</string>
    <string name="text_zodiac_Taurus">Taurus</string>
    <string name="text_zodiac_Gemini">Gemini</string>
    <string name="text_zodiac_Cancer">Cancer</string>
    <string name="text_zodiac_Leo">Leo</string>
    <string name="text_zodiac_Virgo">Virgo</string>
    <string name="text_zodiac_Libra">Libra</string>
    <string name="text_zodiac_Scorpio">Scorpio</string>
    <string name="text_zodiac_Sagittarius">Sagittarius</string>
    <string name="text_zodiac_Capricorn">Capricorn</string>
    <string name="text_zodiac_Aquarius">Aquarius</string>
    <string name="text_zodiac_Pisces">Pisces</string>

    <!--date ranges of zodiac signs-->
    <string name="date_range_Aries">Mar 21 - Apr 20</string>
    <string name="date_range_Taurus">Apr 21 - May 20</string>
    <string name="date_range_Gemini">May 21 - Jun 21</string>
    <string name="date_range_Cancer">Jun 22 - Jul 22</string>
    <string name="date_range_Leo">Jul 23 - Aug 22</string>
    <string name="date_range_Virgo">Aug 23 - Sep 22</string>
    <string name="date_range_Libra">Sep 23 - Oct 22</string>
    <string name="date_range_Scorpio">Oct 23 - Nov 22</string>
    <string name="date_range_Sagittarius">Nov 23 - Dec 21</string>
    <string name="date_range_Capricorn">Dec 22 - Jan 19</string>
    <string name="date_range_Aquarius">Jan 20 - Feb 18</string>
    <string name="date_range_Pisces">Feb 19 - Mar 20</string>

    <!--placeholder (do NOT translate)-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fringilla vel magna scelerisque finibus. Aliquam erat volutpat. In in quam aliquet, finibus leo a, rutrum enim.</string>
</resources>